gcc/testsuite/gfortran.dg/contiguous_12.f90
! { dg-do compile }
! PR fortran/108025

subroutine foo (x)
  real, contiguous :: x(:)
  contiguous       :: x    ! { dg-error "Duplicate CONTIGUOUS attribute" }
end
